Improve TestUtils path resolution for better robustness
Co-authored-by: Luxray997 <29930793+Luxray997@users.noreply.github.com>