@@ -3,10 +3,9 @@ package luxlang.compiler.utils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class TestUtils {
-    private static final String TEST_RESOURCES_DIR = "test/resources/lexer/";
-
     /**
      * Reads the contents of a test input file from the test resources directory.
      *
@@ -15,7 +14,13 @@ public class TestUtils {
      * @throws IOException if the file cannot be read
      */
     public static String readTestFile(String fileName) throws IOException {
-        Path filePath = Path.of(TEST_RESOURCES_DIR + fileName);
+        // Try relative to current working directory first
+        Path filePath = Paths.get("test", "resources", "lexer", fileName);
+        if (!Files.exists(filePath)) {
+            // Fallback to user.dir system property
+            String userDir = System.getProperty("user.dir");
+            filePath = Paths.get(userDir, "test", "resources", "lexer", fileName);
+        }
         return Files.readString(filePath);
     }
 }
